@@ -307,6 +307,10 @@ ant.file            the absolute path of the buildfile.
 ant.version         the version of Ant
 ant.project.name    the name of the project that is currently executing;
                     it is set in the name attribute of &lt;project&gt;.
+ant.project.default-target
+                    the name of the currently executing project's
+                    default target;  it is set via the default
+                    attribute of &lt;project&gt;.
 ant.java.version    the JVM version Ant detected; currently it can hold
                     the values &quot;1.2&quot;, &quot;1.3&quot;, &quot;1.4&quot; and &quot;1.5&quot;.
 </pre>
